# IBF-pipeline-core

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run_pipeline.py
.github/workflows/: publish-to-pypi.yaml
config/drought/: config.yaml
data_updates/drought/: add_climateregions_cosmos.py
docs/: drought.md
ibfpipeline/core/: __init__.py  data.py  load.py  module.py
ibfpipeline/drought/: __init__.py  data.py  extract.py  forecast.py  load.py  pipeline.py  settings.py  utils.py
ibfpipeline/riverflood/: __init__.py  data.py  extract.py  forecast.py  load.py  pipeline.py
pipeline/core/: data.py  load.py  module.py
