[project]
name = "ibf-pipeline-core"
version = "0.0.1"
authors = [
  {name="Jacopo Margutti", email="jmargutti@redcross.nl" },
]
description = "IBF pipelines' core library"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/rodekruis/IBF-pipeline-core"
Issues = "https://github.com/rodekruis/IBF-pipeline-core/issues"

[tool.poetry]
packages = [
    { include = "pipeline/core" }
]

[tool.poetry.dependencies]
python = ">=3.13"
azure-identity = "*"
azure-keyvault-secrets = "*"
azure-storage-blob = "*"
beautifulsoup4 = "*"
black = "*"
certifi = "*"
fiona = ">=1.10b2"
GeoAlchemy2 = "*"
geopandas = "*"
netCDF4 = "*"
pandas = "*"
PyYAML = "*"
python-dotenv = "*"
rasterio = "*"
rasterstats = "*"
SQLAlchemy = "*"
tqdm = "*"
xarray = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"